[package]
name = "tomiko"
description = "Safe, asynchronous OAuth 2.0 authentication server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[dependencies]
argonautica = { git = "https://github.com/bcmyers/argonautica" }
async-trait = "^0.1"
base64 = "^0"
clap = "3.0.0-beta.2"
dotenv = "^0"
form_urlencoded = "^1"
http-basic-auth = "^0"
jsonwebtoken = "^7"
rand = "^0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_urlencoded = "^0.7"
sha2 = "^0"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "^1", features = ["macros"] }
tracing-subscriber = "^0.2"
url = "^2"
warp = "^0.3"
