[package]
name = "tomiko"
description = "Safe, asynchronous OAuth 2.0 authentication server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[dependencies]
rust-argon2 = "1"
async-trait = "^0.1"
base64 = "^0"
clap = { version = "3", features = ["derive", "env"] }
dotenv = "^0"
form_urlencoded = "^1"
http-basic-auth = "^0"
jsonwebtoken = "^7"
rand = "^0.8"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_urlencoded = "^0.7"
sha2 = "^0"
diesel = { version = "1.4", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "^0.2"
url = "^2"
warp = "^0.3"
