[package]
name = "tomiko-auth"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2", features = ["macros"] }
serde = { version = "^1" , features = ["derive"] }
warp = "^0.2"
