[package]
name = "tomiko-auth"
description = "Safe, asynchronous OAuth 2.0 authentication server"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.12"
dotenv = "0.15"
rand = "0.7"
serde = { version = "^1" , features = ["derive"] }
serde_urlencoded = "^0.6"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "^0.2", features = ["macros"] }
warp = "^0.2"
