[package]
name = "tomiko-auth"
description = "Safe, asynchronous OAuth 2.0 authentication server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[features]
default = []
serde-traits = ["serde"]

[dependencies]
tomiko-core = { path = "../tomiko-core", default-features = false, features = ["serde-traits"] }
async-trait = "^0.1"
serde = { version = "^1", features = ["derive"], optional = true }
