[package]
name = "tomiko-core"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde-traits = ["serde"]

[dependencies]
serde = { version = "^1", default-features = false, features = ["derive", "std"], optional = true }
