[package]
name = "tomiko-db"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tomiko-core = { path = "../tomiko-core" }
tomiko-auth = { path = "../tomiko-auth" }
tomiko-util = { path = "../tomiko-util" }
async-trait = "^0.1"
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
