[package]
name = "tomiko-http"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tomiko-core = { path = "../tomiko-core", default-features = false, features = ["serde-traits"] }
tomiko-auth = { path = "../tomiko-auth", default-features = false, features = ["serde-traits"] }
serde = { version = "^1", features = ["derive"] }
serde_urlencoded = "^0.6"
tokio = { version = "^0.2", features = ["macros"] }
warp = "^0.2"
