[package]
name = "tomiko-util"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tomiko-core = { path = "../tomiko-core" }
argonautica = { git = "https://github.com/bcmyers/argonautica" }
rand = "0.7"
base64 = "^0.12"
