[package]
name = "tomiko"
description = "Safe, asynchronous OAuth 2.0 authentication server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tomiko-core = { path = "../tomiko-core" }
tomiko-auth = { path = "../tomiko-auth" }
tomiko-db = { path = "../tomiko-db" }
tomiko-http = { path = "../tomiko-http" }
dotenv = "0.15"
tokio = { version = "^0.2", features = ["macros"] }
