[package]
name = "tomiko"
description = "Safe, asynchronous OAuth 2.0 authentication server"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tomiko-core = { path = "../tomiko-core" }
# tomiko-auth = { path = "../tomiko-auth" }
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
http-basic-auth = "^0"
serde_urlencoded = "^0.6"
warp = "^0.2"
argonautica = { git = "https://github.com/bcmyers/argonautica" }
rand = "0.7"
base64 = "^0.12"
async-trait = "^0.1"
jsonwebtoken = "^7"
tracing-subscriber = "^0.2"
clap = "3.0.0-beta.1"
dotenv = "0.15"
tokio = { version = "^0.2", features = ["macros"] }
serde = { version = "^1", features = ["derive"] }
